# hh_apply

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  ROADMAP.md  SPEC_55_APPLICATION_SUBMIT.md  USER_STORY.md  VSA_CODE_REVIEW.md  config.example.json  config.json  docker-compose.override.yml.example  docker-compose.yml  file_review_issues.sh  pyproject.toml  test_review_report.md
.github/workflows/: ci.yml
benchmarks/: __init__.py  conftest.py  test_api_benchmarks.py
config/: crontab
docs/: ui.md  vsa_finalisation_plan.md  vsa_migration_guide.md  vsa_plan.md
docs/ideas/: stats_concept.md
scripts/: ble001_fix.py  force_run.sh  init-postgres.sql  migrate_imports.py  start.py  startup.sh
scripts/_oneoff/: ble001_fix.py
src/hh_applicant_tool/: __init__.py  __main__.py  container.py  main.py
src/hh_applicant_tool/api/: __init__.py  client.py  client_keys.py  datatypes.py  errors.py
src/hh_applicant_tool/application/: __init__.py  dto.py  ports.py
src/hh_applicant_tool/infrastructure/: __init__.py  ai.py  captcha.py  http.py  test_logger.py  time.py  vacancy_fetcher.py
src/hh_applicant_tool/operations/: apply_vacancies.py  apply_worker.py  authorize.py  call_api.py  channel_monitor.py  clear_negotiations.py  clear_skipped.py  clone_resume.py  create_resume.py  list_resumes.py  max_bot.py  migrate_db.py  prepare_vacancies.py  query.py  reply_employers.py  telegram_bot.py  uninstall.py  update_resumes.py  whoami.py
src/hh_applicant_tool/services/: __init__.py  applications.py  apply_one.py  apply_worker.py  cover_letters.py  daily_digest.py  relevance.py  review_flow.py  vacancy_search.py  vacancy_tests.py
src/hh_applicant_tool/storage/: facade.py
src/hh_applicant_tool/telegram/: __init__.py  transport.py
src/hh_applicant_tool/ui/: __init__.py  _legacy_context.py  api.py  presets.py
src/hh_applicant_tool/utils/: __init__.py  _config_path.py  attrdict.py  config.py  date.py  json.py  jsonc.py  log.py  mixins.py  resume_md.py  string.py  terminal.py
src/job_bot/: __init__.py  __main__.py  container.py
src/job_bot/_legacy_compat/: __init__.py  main_stub.py
src/job_bot/application_prep/: __init__.py  slice.py  utils.py
src/job_bot/application_submit/: __init__.py  errors.py  slice.py
src/job_bot/channel_monitoring/: __init__.py  slice.py
src/job_bot/cli/: __init__.py  _base.py  apply_vacancies.py  apply_worker.py  call_api.py  channel_monitor.py  check_proxy.py  clear_skipped.py  config.py  install.py  list_resumes.py  log.py  logout.py  main.py  max_bot.py  migrate_db.py  observability.py  prepare_vacancies.py  refresh_token.py  settings.py  telegram_bot.py  test_session.py  uninstall.py  update_resumes.py  whoami.py
src/job_bot/config_auth/: __init__.py  slice.py
src/job_bot/dev_tools/: __init__.py  slice.py
src/job_bot/employer_engagement/: __init__.py  slice.py
src/job_bot/max_bot/: __init__.py  requests_transport.py  slice.py
src/job_bot/negotiations/: __init__.py  slice.py
src/job_bot/resume_management/: __init__.py  slice.py
tests/: conftest.py  test_application_drafts.py  test_application_prep_handlers_exception_paths.py  test_application_test_answers.py  test_apply_jobs.py  test_apply_worker.py  test_apply_worker_default.py  test_daily_digest.py  test_infrastructure_ai.py  test_infrastructure_captcha.py  test_infrastructure_delay.py  test_infrastructure_email.py  test_infrastructure_http.py  test_infrastructure_storage.py  test_infrastructure_test_logger.py  test_infrastructure_time.py  test_infrastructure_vacancy_fetcher.py  test_issue_55_deprecation.py  test_issue_56_deprecation.py  test_issue_57_deprecation.py  test_issue_58_deprecation.py  test_issue_77_applications_port.py  test_issue_77_apply_one_port.py  test_issue_77_apply_worker_port.py  test_issue_77_cover_letters_port.py  test_issue_77_digest_port.py  test_issue_77_relevance_port.py  test_issue_77_review_port.py  test_issue_77_vacancy_search_port.py  test_issue_77_vacancy_tests_port.py  test_issue_92_deprecation.py  test_migrate_imports.py  test_operations_channel_monitor.py  test_operations_max_bot.py  test_operations_telegram_bot.py  test_prepare_vacancies.py  test_relevance_failure_modes.py  test_review_flow.py  test_search_profiles.py  test_services_applications.py  (+15 more)
tests/_fixtures/: migrate_imports_fixture.py
tests/integration/: __init__.py  _mocks.py  conftest.py  test_config_to_all_slices_flow.py  test_multi_profile_flow.py  test_prepare_to_submit_flow.py  test_telegram_channel_to_apply_flow.py  test_vacancy_search_to_prep_flow.py
tests/services/: test_relevance.py
tests/vsa/: conftest.py  test_application_prep_relevance_vsa_path.py  test_application_prep_services_ai_filter.py  test_application_prep_services_draft_persister.py  test_application_prep_services_profile_loader.py  test_application_prep_services_vacancy_iteration.py  test_application_submit_handlers_captcha.py  test_application_submit_handlers_cover_letter.py  test_application_submit_handlers_email.py  test_application_submit_handlers_retry_policy.py  test_application_submit_handlers_score.py  test_application_submit_handlers_search.py  test_application_submit_handlers_skip.py  test_application_submit_handlers_storage_io.py  test_application_submit_slice.py  test_channel_monitoring_poller.py  test_channel_monitoring_slice.py  test_cli_health_wiring.py  test_cli_static_registry.py  test_config_auth_slice.py  test_dev_tools_slice.py  test_employer_engagement_slice.py  test_health_endpoints.py  test_job_bot_container.py  test_legacy_compat_main_stub.py  test_max_bot_command_handler.py  test_max_bot_slice.py  test_negotiations_lifecycle_slice.py  test_observability.py  test_rate_limiter.py  test_resume_management_services_resume_renderer.py  test_resume_management_slice.py  test_secrets_backend.py  test_shared_api_datatypes.py  test_shared_api_errors.py  test_shared_storage_facade.py  test_shared_utils_cookiejar.py  test_shared_utils_terminal.py  test_storage_base_repository.py  test_telegram_bot_daily_digest.py  (+5 more)
(+274 files in other folders)
