[project]
name = "hh-applicant-tool"
version = "2.0.0"
description = "HH-Applicant-Tool: An automation utility for HeadHunter (hh.ru) designed to streamline the job search process by auto-applying to relevant vacancies and periodically refreshing resumes to stay at the top of recruiter searches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests[socks]>=2.32.3,<3",
    "prettytable>=3.6.0,<4",
]

[project.optional-dependencies]
playwright = ["playwright>=1.57.0,<2"]
pillow = ["pillow>=12.1.0,<13"]
ui = ["pywebview>=5.0"]
ai = [
    "openai>=1.0.0,<2",
]
# Issue #206 -- the ``keyring`` PyPI package is the bridge to the
# OS keyring (macOS Keychain, Linux Secret Service, Windows
# Credential Vault). It stays an *optional* dep so the default
# ``uv sync`` install does not pull in a keyring backend the user
# may not need. Install with ``uv pip install -e .[secrets]`` to
# opt in.
secrets = ["keyring>=24.0.0,<26"]

[project.scripts]
hh-applicant-tool = "job_bot.cli.main:main"

[dependency-groups]
dev = [
    "isort>=5.12.0,<6",
    "pylint>=2.16.4,<5",
    "pytest>=7.2.2,<10",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.14.9,<1",
    "basedpyright>=1.36.1,<2",
    "pre-commit>=4.6.0,<5",
    "watchfiles>=1.0.0,<2",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0.12.20260518",
    "types-pysocks>=1.7.1.20260518",
    "types-requests>=2.33.0.20260518",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
]

[tool.poetry]
name = "hh-applicant-tool"
version = "2.0.0"
description = "HH-Applicant-Tool: An automation utility for HeadHunter (hh.ru) designed to streamline the job search process by auto-applying to relevant vacancies and periodically refreshing resumes to stay at the top of recruiter searches."
homepage = "https://github.com/s3rgeym/hh-applicant-tool"
repository = "https://github.com/s3rgeym/hh-applicant-tool"
# Впишите себя, кто причастен к каким-либо изменениям
authors = ["Senior YAML Developer <yamldeveloper@proton.me>"]
readme = "README.md"
packages = [
  { include = "job_bot", from = "src" },
]
include = [
  # Schema & migrations live under ``job_bot._legacy_compat.storage.queries``
  # (issue #158). The UI templates moved with the VSA port and now live at
  # ``src/job_bot/ui/templates/`` — both must be shipped in the wheel so the
  # installed package can locate them at runtime.
  { path = "src/job_bot/_legacy_compat/storage/queries/**/*.sql", format = ["sdist", "wheel"] },
  { path = "src/job_bot/ui/templates/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = {extras = ["socks"], version = "^2.32.3"}
prettytable = "^3.6.0"
# poetry add playwright --optional
playwright = { version = "^1.57.0", optional = true }
# Он не работает или устаревший
# libsixel-python = { version = "^0.5.0", optional = true }
pillow = { version = "^12.1.0", optional = true }
pywebview = { version = ">=5.0", optional = true }
openai = { version = "^1.0.0", optional = true }

# poetry install --with playwright,pillow
# poetry install -E ui
[tool.poetry.extras]
playwright = ["playwright"]
# sixel = ["libsixel-python", "pillow"]
pillow = ["pillow"]
ui = ["pywebview"]
ai = ["openai"]
# Issue #206 -- the ``keyring`` PyPI package is the bridge to the
# OS keyring (macOS Keychain, Linux Secret Service, Windows
# Credential Vault). It is an *optional* dep: install with
# ``poetry install -E secrets`` (or ``uv pip install -e .[secrets]``)
# to opt in.
secrets = ["keyring"]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint = "^2.16.4"
pytest = "^7.2.2"
ruff = "^0.14.9"
basedpyright = "^1.36.1"
watchfiles = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hh-applicant-tool = "job_bot.cli.main:main"

# Он заебал агриться на старый код, который был написан до появления агрессивной
# проверки типов в pyright
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# Ошибки показывать он не бросит, но заебывать перестанет
typeCheckingMode = "off"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
# E - pycodestyle
# F - Pyflakes
# B - flake8-bugbear (советую добавить, ловит реальные баги)
# BLE001 - blind-except (bare `except Exception`); issue #69 gate.
#   Existing user-callback sites keep `# noqa: BLE001` with justification.
select = ["E", "F", "B", "BLE001"]

ignore = [
    "E501", # Игнорим длину строк (или полагаемся на автоформаттер)
    "E731", # Разрешаем лямбды
    "B008", # Разрешаем вызов функций в дефолтных аргументах (удобно для FastAPI Depends или Fields)
]

# Запретить удалять импорты
#lint.unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
# Игнорим неиспользуемые импорты только в конфигах или __init__
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true
# Exclude the legacy-compat storage layer (issue #158, narrowed by
# issue #180). These files are unmodified ports of the pre-VSA
# storage code; mypy's per-module overrides do
# not apply to entry-point modules, so the only way to skip them is
# the file-level ``exclude`` directive. The files are still
# type-checked at runtime by the integration tests.
#
# Note: the use-case bridge files in
# ``src/job_bot/application_submit/services/use_cases/`` are
# deliberately NOT excluded — they are checked (via a relaxed
# per-module override below) so regressions there are caught early.
exclude = [
    "src/job_bot/_legacy_compat/.*",
]

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "job_bot.*",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "job_bot.application_submit.services.use_cases.*",
]
# VSA-bridge shims (issue #158, kept checked per issue #180). These
# use-case modules wrap pre-VSA workflows and
# still carry loose typing in places, so they are excluded from
# strict checking here. They are still type-checked (just with
# relaxed settings) so regressions are surfaced — tightening to
# full strict is scheduled for a follow-up cleanup.
strict = false
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
# Tests can be less strict
warn_return_any = false
disallow_untyped_defs = false

# ─── Pytest markers (issue #63) ─────────────────────────────────────
# Integration tests live under ``tests/integration/`` and are
# excluded from the default ``pytest`` run. Run with
# ``pytest -m integration`` to opt in.
[tool.pytest.ini_options]
addopts = ["-nauto"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end cross-slice integration tests (issue #63). Run with: pytest -m integration",
]
timeout = 5
timeout_method = "thread"
